# DECA

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
decalib/: deca.py
decalib/datasets/: detectors.py
decalib/models/: FLAME.py  decoders.py  lbs.py
decalib/utils/: renderer.py
demos/: demo_reconstruct.py  demo_teaser.py  demo_transfer.py
src/decalib/datasets/: datasets.py
src/decalib/models/: encoders.py  resnet.py
src/decalib/utils/: config.py  rotation_converter.py  util.py
