[tool.poetry]
name = "DECA"
version = "1.0.0"
description = "DECA 3DMM regression"
authors = ["Brendan Duke <brendanw.duke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"
scipy = "^1.4.1 "
chumpy = "^0.69"
scikit-image = "^0.15 "
opencv-python = "^4.1.1 "
scikit-image = "^0.15"
PyYAML = "^5.1.1         "
torch = "^1.6.0"
torchvision = "^0.7.0"
face-alignment = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
