[metadata]
# replace with your username:
name = decalib-brendanduke
version = 1.0.0
author = Brendan Duke
author_email = brendanw.duke@gmail.com
description = DECA 3DMM regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dukebw/DECA
project_urls =
    Bug Tracker = https://github.com/dukebw/DECA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
